新增：最新消息版面

--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -7,3 +7,28 @@
   font-weight: 600;
   color: $accent;
 }
+
+// 最新消息 - 標題 - 縮減字數
+.title-mul-truncate {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+// 最新消息 - 內文 - 縮減字數
+.text-mul-truncate {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+// 最新消息 - 內文 - 上方圖片
+.bg-news {
+  width: 100%;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  border: 1px solid #707070;
+  opacity: 0.23;
+}
