--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -7,3 +7,16 @@
   font-weight: 600;
   color: $accent;
 }
+
+// 著作權聲明 列表樣式
+.ul-list {
+  list-style: none; /* Remove default bullets */
+}
+.ul-list li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #A64E3A; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
+}
