--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -8,13 +8,14 @@
   color: $accent;
 }
 
-// 最新消息 - 標題 - 縮減字數
-.title-mul-truncate {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-  overflow: hidden;
+// 最新消息 - 標題 - 閱讀更多按鈕
+@include media-breakpoint-up(md) {
+  .btn-md-block {
+    display: block;
+    width: 25%;
+  }
 }
+
 // 最新消息 - 內文 - 縮減字數
 .text-mul-truncate {
   display: -webkit-box;
@@ -26,6 +27,7 @@
 .bg-news {
   width: 100%;
   height: 300px;
+  background-image: url("https://images.unsplash.com/photo-1476275466078-4007374efbbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1314&q=80");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
