update:index+ejs

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -25,8 +25,7 @@
         <li><a href="#" title="上方導覽連結區" class="text-white pr-1"><small>:::</small></a></li>
         <li><a href="index.html" title="回首頁" class="text-white pr-1"> <small>回首頁</small></a>|</li>
         <li><a href="sitemap.html" title="網站導覽" class="text-white px-1"><small>網站導覽</small></a>|</li>
-        <li><a href="https://ksepb.kcg.gov.tw/" target="_blank" title="高雄市政府環境保護局(另開新視窗)" class="text-white px-1"><small>高雄市政府環境保護局</small></a>|</li>
-        <li><a href="https://air.ksepb.gov.tw/" target="_blank" title="高雄市政府環保局空噪科(另開新視窗)" class="text-white pl-1"><small>高雄市政府環保局空噪科</small></a></li>
+        <li><a href="https://ksepb.kcg.gov.tw/" target="_blank" title="高雄市政府環境保護局(另開新視窗)" class="text-white px-1"><small>高雄市政府環境保護局</small></a></li>
       </ul>
     </header>
     <!-- 導覽列 -->
